# MaRS-Summer-Tasks

./: README.md
Task_1/: README.md
Task_1/src/cpp_pubsub/: package.xml
Task_1/src/cpp_pubsub/src/: publisher_node.cpp
Task_1/src/py_pubsub/py_pubsub/: publisher_node.py
Tasks/Task_1/src/cpp_pubsub/: CMakeLists.txt
Tasks/Task_1/src/cpp_pubsub/src/: subscriber_node.cpp
Tasks/Task_1/src/py_pubsub/: package.xml  setup.py
Tasks/Task_1/src/py_pubsub/py_pubsub/: subscriber_node.py
Tasks/Task_2/my_turtle_pkg/: package.xml  setup.py
Tasks/Task_2/my_turtle_pkg/my_turtle_pkg/: circle_patrol_client.py  circle_patrol_server.py
Tasks/Task_2/turtle_interfaces/: CMakeLists.txt  package.xml
Tasks/Task_2/turtle_interfaces/action/: ExecuteCircle.action
Tasks/Task_3 and Task_4/my_robot_sim/: CMakeLists.txt  package.xml
Tasks/Task_3 and Task_4/my_robot_sim/launch/: sim.launch.py
Tasks/Task_3 and Task_4/my_robot_sim/rviz/: config.rviz
Tasks/Task_3 and Task_4/my_robot_sim/urdf/: robot.urdf.xacro
Tasks/Task_3 and Task_4/my_robot_sim/worlds/: my_world.sdf
