<?xml version="1.0"?>
<package format="3">
  <name>my_turtle_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="saket@todo.todo">saket</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>turtle_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
